[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {email = "thomas@gibfest.dk"},
  {name = "Thomas Steen Rasmussen"}
]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "dnspython == 2.4.2",
    "PyYAML == 6.0.1",
    "cryptography == 41.0.5",
    "pid == 3.0.4",
]

description = "The client part of the Certgrinder project"
dynamic = ["version"]
license = {text = "BSD 3-Clause License"}
name = "certgrinder"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
certgrinder = "certgrinder.certgrinder:main"

[project.optional-dependencies]
dev = ["twine == 4.0.2", "pre-commit == 3.5.0", "setuptools-scm == 8.0.4", "build==1.0.3"]
test = ["pytest == 7.4.3", "pytest-cov==4.1.0", "tox == 4.11.3"]
docs = ["Sphinx==7.2.6", "sphinx-rtd-theme==1.3.0", "sphinx-argparse==0.4.0"]

[project.urls]
homepage = "https://github.com/tykling/certgrinder"
documentation = "https://certgrinder.readthedocs.org/"

[tool.setuptools_scm]
root = ".."

[tool.setuptools.packages.find]
exclude = ["man*"]

[tool.pydocstyle]
convention = "google"
match = "client/certgrinder/"
