[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {email = "thomas@gibfest.dk"},
  {name = "Thomas Steen Rasmussen"}
]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests == 2.32.3",
    "PyYAML == 6.0.1",
    "cryptography == 42.0.8",
    "pid == 3.0.4",
    "certbot == 2.11.0",
]

description = "The server part of the Certgrinder project"
dynamic = ["version"]
license = {text = "BSD 3-Clause License"}
name = "certgrinderd"
readme = "README.md"
requires-python = ">=3.8"

[project.scripts]
certgrinderd = "certgrinderd.certgrinderd:main"

[project.optional-dependencies]
dev = ["twine == 5.1.0", "pre-commit == 3.7.1", "setuptools-scm == 8.1.0", "build==1.2.1"]
test = ["pytest == 8.2.2", "pytest-cov==5.0.0", "tox == 4.15.1"]
docs = ["Sphinx==7.3.7", "sphinx-rtd-theme==2.0.0", "sphinx-argparse==0.4.0"]

[project.urls]
homepage = "https://github.com/tykling/certgrinder"
documentation = "https://certgrinder.readthedocs.org/"

[tool.setuptools_scm]
root = ".."

[tool.setuptools.packages.find]
exclude = ["man*"]

[tool.pydocstyle]
convention = "google"
match = "server/certgrinderd/"
