[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {email = "thomas@gibfest.dk"},
  {name = "Thomas Steen Rasmussen"}
]

classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests == 2.32.3",
    "PyYAML == 6.0.1",
    "cryptography == 42.0.8",
    "pid == 3.0.4",
    "certbot == 3.1.0",
]

description = "The server part of the Certgrinder project"
dynamic = ["version"]
license = {text = "BSD 3-Clause License"}
name = "certgrinderd"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
certgrinderd = "certgrinderd.certgrinderd:main"

[project.optional-dependencies]
dev = ["twine == 6.0.1", "pre-commit == 4.0.1", "setuptools-scm == 8.1.0", "build==1.2.2.post1"]
test = ["pytest == 8.3.4", "pytest-cov==6.0.0", "tox == 4.23.2"]
docs = ["Sphinx==8.1.3", "sphinx-rtd-theme==3.0.2", "sphinx-argparse==0.4.0"]

[project.urls]
homepage = "https://github.com/tykling/certgrinder"
documentation = "https://certgrinder.readthedocs.org/"

[tool.setuptools_scm]
root = ".."

[tool.setuptools.packages.find]
exclude = ["man*"]

[tool.pydocstyle]
convention = "google"
match = "server/certgrinderd/"
